package incidentes;

public enum EstadoDelIncidente {
    SOLUCIONADO,
    NO_SOLUCIONADO
}
